# LedgerFlow

./: .dvcignore  .gitignore  CONTRIBUTING.md  LedgerFlow-build-plan.md  LedgerFlow-system-prompt.md  PHASE_0_SUMMARY.md  PHASE_1_SUMMARY.md  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.sh  test_phase1.py  verify_setup.py
.dvc/: config
.github/workflows/: ci.yml
LedgerFlow/: __init__.py  params.py  pipeline.py  registry.py
LedgerFlow/data/: __init__.py  ingest.py  loader.py  splitter.py  synthetic.py  validators.py
LedgerFlow/evaluation/: __init__.py  compare.py  metrics.py  report.py
LedgerFlow/evaluation/templates/: recommendation_memo.md.j2
LedgerFlow/features/: __init__.py  base.py  time_windows.py
dashboard/: app.py  loaders.py
notebooks/: 01_eda.ipynb  02_feature_analysis.ipynb
reports/: .gitignore  eval_metrics.json  feature_importance.json  feature_runtime.json  low_signal_features.json  recommendation_memo.md
scripts/: make_readme_assets.py  new_feature.py  reproduce_experiment.sh
tests/: conftest.py  test_structure.py
tests/integration/: test_benchmark.py  test_evaluation_pipeline.py  test_ingest.py  test_loader.py  test_parity.py
tests/unit/: test_base_feature.py  test_dashboard.py  test_metrics.py  test_pipeline.py  test_registry.py  test_time_windows.py  test_validators.py
