[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerflow"
version = "0.1.0"
description = "A modular feature engineering library for transforming raw event logs into machine-learning-ready signals"
readme = "README.md"
authors = [{name = "LedgerFlow Team"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.24,<2.2",
    "scikit-learn>=1.3.0",
    "pandera>=0.19.0",
    "shap>=0.44.0",
    "pyyaml>=6.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "dvc[s3]>=3.0.0",
    "joblib>=1.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=14.0.0",
    "fastparquet>=2023.10.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]
notebooks = [
    "matplotlib>=3.7",
    "jupyter>=1.0",
    "nbconvert>=7.0",
    "nbformat>=5.0",
    "ipykernel>=6.0",
]
dashboard = [
    "streamlit>=1.30",
]

[project.urls]
"Homepage" = "https://github.com/JCHETAN26/LedgerFlow"
"Bug Tracker" = "https://github.com/JCHETAN26/LedgerFlow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["LedgerFlow*"]

[tool.setuptools.package-data]
"LedgerFlow.evaluation" = ["templates/*.j2"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "benchmark: runtime benchmark tests (Phase 6.3)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
# Most scientific-Python deps ship without type stubs; don't fail on them.
ignore_missing_imports = true

[[tool.mypy.overrides]]
# CLI demo entry points are not part of the typed library surface.
module = "LedgerFlow.data.loader"
warn_unused_ignores = false